rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax09/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		abstract default void m() { 
			
		} 
	}
}